[package]
name = "task_scheduler_rs"
version = "0.1.0-beta"
edition = "2021"
description = "A Rust-based scheduler(Beta) with basic functionality, focused on adding tasks and handling actions like execute, pause, and shutdown using channels for task communication."
repository  = "https://github.com/yangsnapify/task-scheduler-rs"
license = "MIT"
keywords = ["task", "scheduler"]

[dependencies]
